# AusicInstaller

./: CMakeLists.txt  analyze_zip_differences.py  append_zip.py  installer.cpp  installer.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  test_zip_append.py
pages/: completepage.cpp  completepage.h  installpage.cpp  installpage.h  progresspage.cpp  progresspage.h
